--- a/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
@@ -57,18 +57,21 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <!-- ICON FOR MAINNET -->
             <span class="nav-link-icon">
-              <%= render BlockScoutWeb.IconsView, "_network_icon.html" %>
+              <%= render BlockScoutWeb.IconsView, Application.get_env(:block_scout_web, BlockScoutWeb.Chain)[:network_icon] %>
             </span>
             <!-- ICON FOR TESTNET -->
             <!-- <span class="nav-link-icon">
               <%= render BlockScoutWeb.IconsView, "_test_network_icon.html" %>
             </span> -->
-            <%= gettext("POA Core") %>
+            <%= Application.get_env(:block_scout_web, BlockScoutWeb.Chain)[:subnetwork] %>
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="https://sokol.blockscout.com/"><%= gettext("POA Sokol") %></a>
-            <a class="dropdown-item" href="https://poa.blockscout.com/"><%= gettext("POA Core") %></a>
-          </div>
+          <%= if Enum.count(Application.get_env(:block_scout_web, BlockScoutWeb.Chain)[:network_navigation]) > 0 do %>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <%= for {subnet, sublink} <- Application.get_env(:block_scout_web, BlockScoutWeb.Chain)[:network_navigation] do %>
+                <a class="dropdown-item" href="<%= sublink %>"><%= subnet %></a>
+              <% end %>
+            </div>
+          <% end %>
         </li>
       </ul>
     </div>
