--- a/apps/block_scout_web/lib/block_scout_web/templates/layout/app.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/layout/app.html.eex
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title><%= gettext "BlockScout" %></title>
+    <title><%= Application.get_env(:block_scout_web, BlockScoutWeb.Chain)[:subnetwork] <> " Explorer - " <> Application.get_env(:block_scout_web, BlockScoutWeb.Chain)[:network] <> " by BlockScout" %></title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
